--- a/DataProcessing.Rmd
+++ b/DataProcessing.Rmd
@@ -71,16 +71,16 @@ tlp_text_to_df = function(x){
 
 ```{r}
 #Create tokenized_df, each row is a token
-tokenized_df_unnested = PELIC_compiled %>% 
-  #create tokenized df from the tok_lem_POS string
-  mutate(tokenized_nested_df = map(tok_lem_POS, tlp_text_to_df)) %>% 
-  #keep the unique identifier of answer id
-  select(answer_id, tokenized_nested_df) %>% 
-  #make the df longer and unndest
-  unnest(tokenized_nested_df) %>% 
+# tokenized_df_unnested = PELIC_compiled %>% 
+#   #create tokenized df from the tok_lem_POS string
+#   mutate(tokenized_nested_df = map(tok_lem_POS, tlp_text_to_df)) %>% 
+#   #keep the unique identifier of answer id
+#   select(answer_id, tokenized_nested_df) %>% 
+#   #make the df longer and unndest
+#   unnest(tokenized_nested_df) %>% 
+#   
   
-  
-tokenized_df_unnested %>% write.csv('data/tokenized_df_unnested.csv')
+#tokenized_df_unnested %>% write.csv('data/tokenized_df_unnested.csv')
 
 tokenized_df_unnested = read.csv('data/tokenized_df_unnested.csv')
 
